[package]
name = "utility"
version = "0.1.0"
edition = "2018"
authors = ["Ninjani"]

[dependencies]
itertools = "0.7.8"
bio = "0.22.0"
num = "0.2.0"
reqwest = "0.8.7"
regex = "1.0.2"
ndarray = "0.11.2"
rand = "0.5.5"
failure = "0.1.3"
hashbrown = "0.1.7"
path_abs = "0.4.1"
scraper = "0.10.0"
glob = "0.3.0"
