[package]
name = "utility"
version = "0.1.0"
edition = "2018"
authors = ["Ninjani"]

[dependencies]
itertools = "0.10.3"
bio = "0.41.0"
num = "0.4.0"
reqwest = "0.11.10"
regex = "1.5.5"
ndarray = "0.15.4"
rand = "0.8.5"
anyhow = "1.0"
hashbrown = "0.12.0"
scraper = "0.12.0"
thiserror = "1.0.30"
glob = "0.3.0"
